--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <p id="installmetamasksubheading" class="modalsubheading">You need Metamask's browser extension to start minting. If you’re on a mobile browser, please switch to desktop. <a href="https://learncrypto.com/blog/keep-learning/what-is-web3-wallet-why-you-might-need-one" target="_blank">Know more</a></p>
       <img src="installmetamask.png" id="installmetamaskill">
       <div>
-        <a href="https://metamask.io/download/" target="_blank"><button id="installmetamaskbtn">GET METAMASK EXTENSION</button></a>
+        <a href="https://metamask.io/download/" target="_blank"><button id="installmetamaskbtn">GET METAMASK</button></a>
       </div>
     </div>  
 
