--- a/app.html
+++ b/app.html
@@ -29,7 +29,14 @@
 
     gtag('config', 'G-PZH2R8DDHT');
   </script>
-  
+
+<script>
+  (function(h,e,a,t,m,p) {
+  m=e.createElement(a);m.async=!0;m.src=t;
+  p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+  })(window,document,'script','https://u.heatmap.it/log.js');
+</script>
+
   </head>
 
   <body>
